# logiee-s-tc_sensor_kit_launch

common_sensor_launch/launch/: velodyne_VLP32.launch.xml
logiee-s-tc_sensor_kit_description/: CMakeLists.txt  package.xml
logiee-s-tc_sensor_kit_description/config/: c1_camera.param.yaml  c1_camera_info.yaml  default_camera.param.yaml  default_camera_info.yaml  sensor_kit_calibration.yaml  sensors_calibration.yaml
logiee-s-tc_sensor_kit_description/urdf/: sensor_kit.xacro  sensors.xacro
logiee-s-tc_sensor_kit_launch/: CMakeLists.txt  package.xml
logiee-s-tc_sensor_kit_launch/config/: microstrain.yaml  sensors_calibration.yaml
logiee-s-tc_sensor_kit_launch/launch/: autoware.launch_sensing.xml  camera.launch.xml  imu.launch.xml  lidar.launch copy.xml  lidar.launch.xml  microstrain.launch.py  pointcloud_preprocessor.launch.py  sensing.launch.xml
logiee-s-tc_sensor_kit_launch_description/: CMakeLists.txt  package.xml
logiee-s-tc_sensor_kit_launch_description/urdf/: sensor_kit.xacro  sensors.xacro
