<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>logiee-s-tc_sensor_kit_launch_description</name>
  <version>0.1.0</version>
  <description>The logiee-s-tc_sensor_kit_launch_description package</description>
  <maintainer email="naoto.hiramatsu@tier4.jp">Naoto Hiramatsu</maintainer>
  <maintainer email="shintaro.sakoda@tier4.jp">Shintaro Sakoda</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake_auto</buildtool_depend>

  <depend>velodyne_description</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
